--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,9 +18,10 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
+    namespace 'com.carlrosales.capacitor.subscriptions'
     compileSdk project.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : 35
     defaultConfig {
-        minSdkVersion project.hasProperty('minSdkVersion') ? rootProject.ext.minSdkVersion : 23
+        minSdkVersion project.hasProperty('minSdkVersion') ? rootProject.ext.minSdkVersion : 24
         targetSdkVersion project.hasProperty('targetSdkVersion') ? rootProject.ext.targetSdkVersion : 35
         versionCode 1
         versionName "1.0"
